# benchmark-reverse-proxies

./: .gitignore  Cargo.toml  README.md  build.rs  cpu_power.sh  my-oha-keepalive.sh  my-oha.sh  origin-nginx.sh
hello-actix-http-server/: Cargo.toml
hello-actix-http-server/src/: main.rs
hello-hyper-server/: Cargo.toml
hello-hyper-server/src/: main.rs
hello-pingora-server/: Cargo.toml
hello-pingora-server/src/: main.rs
origin-actix/: Cargo.toml
origin-c-epoll/: Makefile  main.c  oha-keepalive.json  oha-no-keepalive.json  strace.no-keepalive.txt.106744  strace.no-keepalive.txt.106745
origin-c-epoll-mp/: Makefile  main.c
origin-c-sync/: Makefile  main.c
origin-heph/: Cargo.toml
origin-heph/src/: main.rs
origin-hyper/: Cargo.toml
origin-hyper/src/: main.rs
origin-liburing/: Makefile  main.c
origin-monoio/: Cargo.toml
origin-monoio/src/: main.rs
origin-nginx/: nginx.conf
origin-ntex/: Cargo.toml
origin-ntex/src/: main.rs
origin-pingora/: Cargo.toml
origin-pingora/src/: main.rs
origin-tokio/: Cargo.toml
origin-tokio/src/: main.rs
origin-toysync/: Cargo.toml  perf.data.old
origin-toysync/src/: date.rs  main.rs
origin-zap/: build.zig  build.zig.zon
origin-zap/src/: main.zig
proxy-actix/: Cargo.toml
proxy-actix/src/: main.rs
proxy-hyper/: Cargo.toml
proxy-hyper/src/: main.rs
proxy-nginx/: nginx.conf
proxy-pingora/: Cargo.toml
proxy-pingora/src/: main.rs
results/hello-actix-http-server/: curl.txt  oha.json
results/hello-hyper-server/: curl.txt  oha.json
results/hello-pingora-server/: curl.txt  oha.json
results/nginx/: curl.txt  oha.json
results/origin-actix/: curl.txt  oha-keepalive.json  oha-no-keepalive.json  oha.json
results/origin-c-epoll/: curl.txt  oha-keepalive.json  oha-no-keepalive.json  oha-remote-keepalive.json
results/origin-c-epoll-mp/: curl.txt  oha-keepalive.json  oha-no-keepalive.json
results/origin-c-sync/: curl.txt  oha-keepalive.json  oha-no-keepalive.json
results/origin-heph/: curl.txt  oha-keepalive.json  oha-no-keepalive.json
results/origin-hyper/: curl.txt  oha-keepalive.json  oha-no-keepalive.json  oha.json
results/origin-liburing/: curl.txt  oha-keepalive.json  oha-no-keepalive.json
results/origin-monoio/: curl.txt  oha-keepalive.json  oha-no-keepalive.json
results/origin-nginx/: curl.txt  oha-keepalive.json  oha-no-keepalive.json  oha-remote-keepalive.json  oha.json
results/origin-ntex/: curl.txt  oha-keepalive.json  oha-no-keepalive.json
results/origin-pingora/: curl.txt  oha-keepalive.json  oha-no-keepalive.json  oha.json
results/origin-tokio/: curl.txt  oha-keepalive.json  oha-no-keepalive.json
results/origin-toysync/: curl.txt  oha-keepalive.json  oha-no-keepalive.json
results/origin-zap/: curl.txt  oha-keepalive.json  oha-no-keepalive.json
results/proxy-actix/: curl.txt  oha-keepalive.json  oha-no-keepalive.json  oha.json
results/proxy-hyper/: curl.txt  oha-keepalive.json  oha-no-keepalive.json  oha.json
results/proxy-nginx/: curl.txt  oha-keepalive.json  oha-no-keepalive.json  oha.json
results/proxy-pingora/: curl.txt  oha-keepalive.json  oha-no-keepalive.json  oha.json
src/: main.rs
