[package]
name = "origin-heph"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
heph = { git = "https://github.com/Thomasdezeeuw/heph", branch = "main" }
heph-http = { git = "https://github.com/Thomasdezeeuw/heph", branch = "main" }
heph-rt = { git = "https://github.com/Thomasdezeeuw/heph", branch = "main" }
log = { version = "0.4.21", default-features = false }
std-logger = "0.5.3"
