[package]
name = "origin-monoio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.6.0"
futures = "0.3.30"
http-body-util = "0.1.1"
hyper = { version = "1.2.0", features = ["server", "http1"] }
monoio = "0.2.3"
monoio-compat = { version = "0.2.2", features = ["hyper"] }
