[package]
name = "origin-ntex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.11.3"
log = "0.4.21"
ntex = "1.2.0"
ntex-net = { version = "1.0.0", features = ["tokio"] }
ntex-rt = { version = "0.4.12", features = ["tokio"] }
