[package]
name = "origin-ntex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.11.3"
log = "0.4.21"
ntex = { git = "https://github.com/ntex-rs/ntex", branch = "master", package = "ntex", features = ["glommio"] }
ntex-net = { git = "https://github.com/ntex-rs/ntex", branch = "master", package = "ntex-net", features = ["glommio"] }
ntex-rt = { git = "https://github.com/ntex-rs/ntex", branch = "master", package = "ntex-rt", features = ["glommio"] }
