[package]
name = "proxy-hyper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
once_cell = "1.19.0"
reqwest = "0.12.1"
tokio = { version = "1", features = ["full"] }
http = "1.1.0"
