[package]
name = "proxy-pingora"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.78"
pingora = { git = "https://github.com/cloudflare/pingora", branch = "main", package = "pingora" }
pingora-core = { git = "https://github.com/cloudflare/pingora", branch = "main", package = "pingora-core" }
pingora-proxy = { git = "https://github.com/cloudflare/pingora", branch = "main", package = "pingora-proxy" }
